# llm-sales-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  E2E.md  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_sdk.py
app/: agent.py  config.py  main.py  models.py  repository.py  router.py  services.py  validators.py
app/api/: middlewares.py
app/llm_logic/: agent.py  graph_rag.py  long_term_memory.py  negotiation_fsm.py  structured_output.py  tools.py  validators.py
app/llm_logic/providers/: base.py  gemini.py  groq.py  ollama.py
docker/: otel-collector-config.yaml  promtail.yml
docker/grafana/provisioning/datasources/: datasources.yaml
ollama-pull-model/: Dockerfile  pull-model.sh
tests/: conftest.py
tests/integration/: test_agent_workflow.py  test_api_workflow.py
tests/unit/: test_agent.py  test_agent_gemini.py  test_agent_groq.py  test_api.py  test_config.py  test_domain.py  test_enterprise_features.py  test_middleware.py  test_repository.py  test_services.py
